--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <h3 class="fw-bold">Who am I?</h3>
             <p>I have a background in Information Technology with a focus on Software Engineering. Skilled in building web applications using HTML, CSS, JavaScript, Java, and PHP, and managing databases with MySQL.</p>
             <p>In addition to technical skills, I’m also experienced in critical thinking, problem solving, and team collaboration. I’m always eager to grow by exploring new technologies and working on real-world projects.</p>
-            <a href="resume/CV Muhamad Ryan Arsyad2.pdf" class="btn btn-primary ">Resume</a>
+            <a href="resume/CV Muhamad Ryan Arsyad.pdf" class="btn btn-primary ">Resume</a>
           </div>
           <div class="col-lg-6">
             <h3 class="fw-bold">Personal info</h3>
