--- a/index.html
+++ b/index.html
@@ -136,8 +136,8 @@
           </div>
           <div class="col-6 col-sm-4 col-md-2">
             <div class="skill-card">
-              <img src="images/codeigniter-logo.webp" alt="CodeIgniter" class="img-fluid skill-icon">
-              <p class="mt-2">CodeIgniter</p>
+              <img src="images/express-js.png" alt="Express" class="img-fluid skill-icon">
+              <p class="mt-2">Express.js</p>
             </div>
           </div>
         </div>
